# home

./: .gitignore  .gitmodules  BLOCKCHAIN_PROJECT.md  BLOCKCHAIN_PROJECTS.md  BUILD  Backends_Tools_Understand.md  CICD.md  CMakeLists.txt  CONFIGURE_PYTHON_ENVIRONMENT_VSCODE.md  Debug_Install_K8s.md  Deploy_Tools.md  Dockerfile  ERROR_BUILD_ECHO_SERVER.md  ERROR_GATEWAY_K8S_CRD.md  ERROR_GITHUB_CIRCLECI.md  ERROR_START_MINIKUBE.md  GENERATE_SELF_SIGNED_CERT.md  HOW_TO_FETCH_MAVEN_LIBS.md  HOW_TO_RUN_AND_DEBUG.md  HOW_TO_RUN_PYTHON.md  INSTALL_PROJECT.md  K8s_Understand.md  Kubernetes_Understand.md  MINIKUBE_TUNNEL.md  MODULE.bazel  README.md  SECURITY_METHODS.md  TODO.md  compose.yaml  go.mod  go.sum  go_deps.bzl  maven_install.json  requirements_lock.txt
.github/workflows/: main.yml  quotecontract.yml  terraform-minikube.yml  uniswap_milestone1.yml
angle/: README.md
angle/kmip/: KMIP.md
bamboo/server/: BUILD  main.go
caddi/: caddi-tls-secret.yaml  cmd.sh
caddi/cmd/: BUILD.bazel  HOW_TO_RUN.sh  cmd.sh  generate-certs.sh  main.go  port_443_error.md  referenceGrant.yaml  server-key.pem  server.pem  skaffold.yaml
caddi/cmd/charts/: Chart.yaml  values.yaml
caddi/cmd/charts/templates/: deployment.yaml  istio-gateway.yaml  service.yaml  serviceaccount.yaml
caddi/cmd/terraform/: .gitignore  deployment.tf  docker_pull_secret.tf  istio-gateway.tf  namespace.tf  provider.tf  service.tf
caddi/websocket/: BUILD.bazel  cmd.sh  main.go  redis_store.go
caddi/websocket/charts/: Chart.yaml  skaffold.yml  values.yaml
caddi/websocket/charts/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
caddi/websocket/conn/: BUILD.bazel  client.go
caddi/websocket/templates/: userprofile.html
caddi/websocket/terraform/: main.tf
caddi/websocket/testcases/: BUILD.bazel  complex_websocket_test.go
caesar/cl/: square.go
caesar/glfw/: BUILD.bazel  window.go
caesar/openglexamples/: BUILD  CMakeLists.txt  HOW_TO_RUN_C++_BAZEL.md  HOW_TO_RUN_CMAKE.md  Makefile  README.md  glpuzzle.c  helloopengl.c  install.sh  robotarm
docker/: Dockerfile.multistage  compose.yaml
docker/cgo/: Dockerfile.multistage  compose.yaml
docker/gocv/: Dockerfile.multistage  compose.yaml
docker/http/: Dockerfile.multistage  compose.yaml
docker/opentelemetry-service/: Dockerfile.multistage
docker/phase1/: Dockerfile  Dockerfile.multistage
docker/server/: .env  Dockerfile.multistage  compose.yaml
docker/websocket/: .env  Dockerfile.multistage  compose.yaml  draft.txt
dragon/: README.md
elliptic/: README.md
elliptic/contour/: Install_Contour_Gateway_Using_Helm.sh
elliptic/envoy/: README.md
elliptic/ingress/: DeployedResourceWhenInstallIngress.md  IMPORTANT_ERROR.md  Install_NGINX_Ingress_Gateway_Using_Helm.sh  README.md  SSL_PASSTHROUGH_GATEWAY.yaml  SSL_TERMINATE_AT_GATEWAY_GRPC.yaml  SSL_TERMINATE_AT_GATEWAY_HTTP.yaml  (+3 more)
elliptic/serviceA/: BUILD.bazel  Chart.yaml  README.md  main.go  skaffold.yaml  values.yaml
elliptic/serviceA/templates/: _helpers.tpl  deployment.yaml  service.yaml
elliptic/serviceB/: BUILD.bazel  Chart.yaml  build_image.sh  main.go  skaffold.yaml  values.yaml
elliptic/serviceB/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
elliptic/serviceB/templates/tests/: test-connection.yaml
elliptic/serviceC/: BUILD.bazel  INSTALL_CURL_HTTP3  README.md  main.go
elliptic/serviceC/cert/: cert.pem  key.pem
magnet/: README.md
magnet/ffmpeg/: BUILD.bazel  README.md  main.go
magnet/ffmpeg/aio/: BUILD.bazel  main.go
magnet/ffmpeg/ffmpeg-go/: BUILD.bazel  main.go  showProgress.go  stream.go
magnet/ffmpeg/ffmpeg-go/gocv/: BUILD.bazel  hello.go
magnet/ffmpeg/vidio/: BUILD.bazel  main.go
magnet/gstream/: BUILD.bazel  README.md  main.go
magnet/gstream/c-tutorial/: CMakeLists.txt  How_To_Write_Makefile.md  Makefile  tutorial-1.c  tutorial-2.c
magnet/minio/: BUILD.bazel  main.go
magnet/multipartmix/: BUILD.bazel  main.go
pacman/: BUILD  README.md  main.go  result.log.md
pacman/address/: BUILD.bazel  README.md  block.go  blockchain.go  blockchain_iterator.go  cli.go  transaction.go  transaction_input.go  wallet.go
pacman/cache/: BUILD.bazel  README.md  block.go  blockchain.go  blockchain_iterator.go  proofofwork.go  transaction.go  transaction_input.go  transaction_output.go  utxo_set.go
pacman/cipher/: BUILD.bazel  base58.go  base58_test.go  hash.go  sign.go
pacman/cli/: BUILD.bazel  cli.go  cli_createblockchain.go  cli_createwallet.go  cli_getbalance.go  cli_listaddress.go  cli_print.go  cli_reindexutxo.go  cli_send.go
pacman/cryptographic/: BUILD.bazel  How_to_verify_EDCSA_signature.md  README.md  base58.go  blockchain.go  proofofwork.go  transaction.go  transaction_output.go  wallets.go  wallets.log.md
pacman/merkletree/: BUILD.bazel  MerkleTree.md  merkle_tree.go  merkle_tree_test.go
pacman/serialize/: BUILD.bazel  main.go  wallet.go  wallets.go
pacman/wallet/: BUILD.bazel  wallet.go  wallets.go
perimeter/beam/: BUILD.bazel  README.md  wordcount.go
phase1/: BUILD  hello.go
phase1/cgo/: BUILD.bazel  libadd.c  libadd.h  main  main.go
phase1/echo/: BUILD.bazel  main.go
phase1/echo/templates/: text_example.html
phase1/gorm+sqlite/: BUILD.bazel  main.go
phase1/simplecgo/: BUILD.bazel  main.go
phase1/skaffold/: BUILD.bazel  Dockerfile  HOW_TO_RUN.md  README.md  k8s-deployment.yaml  k8s-service.yaml  main.go  skaffold.yaml
phase1/tdd/: BUILD.bazel  main.go  server.go  server_test.go
phase1/uberfx/: BUILD.bazel  main.go
phase1/uberfx/database/: BUILD.bazel  mysql_init.go
phase1/uberfx/repository/: BUILD.bazel  user_repository.go
phase1/websocket/: BUILD.bazel  main.go
phase1/websocket/conn/: BUILD.bazel  client.go  hub.go
phase1/websocket/templates/: chat.html  userprofile.html
phase1/websocket/testcases/: BUILD.bazel  complex_websocket_test.go  echo_websocket_test.go
phoenix/alvtree/: BUILD.bazel  alvtree_test.go  node.go  tree.go
torus/: LECTURES.md
(+758 files in other folders)
