bazel_dep(name = "rules_go", version = "0.56.1")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_docker_compose_test", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.1",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "golang_base",
    image = "golang:1.23",
    platforms = ["linux/amd64"],
)
use_repo(oci, "golang_base", "golang_base_linux_amd64")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_alexeidt_aio",
    "com_github_alexeidt_vidio",
    "com_github_cockroachdb_cockroach_go_v2",
    "com_github_esimov_pigo",
    "com_github_fogleman_gg",
    "com_github_go_gl_gl",
    "com_github_go_gl_glfw_v3_3_glfw",
    "com_github_go_gl_mathgl",
    "com_github_go_gst_go_glib",
    "com_github_go_gst_go_gst",
    "com_github_go_redis_redis_v8",
    "com_github_go_sql_driver_mysql",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_gorilla_securecookie",
    "com_github_gorilla_sessions",
    "com_github_gorilla_websocket",
    "com_github_jackc_pgx_v5",
    "com_github_labstack_echo_v4",
    "com_github_lib_pq",
    "com_github_markbates_goth",
    "com_github_pion_interceptor",
    "com_github_pion_webrtc_v4",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_cockroachdb",
    "com_github_u2takey_ffmpeg_go",
    "com_github_vladimirvivien_go4vl",
    "io_gocv_x_gocv",
    "io_gorm_driver_sqlite",
    "io_gorm_gorm",
    "org_uber_go_fx",
    "org_uber_go_zap",
)
