bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_docker_compose_test", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

##################################################################################
##
## NodeJS
##
##################################################################################



##################################################################################
##
## Rust
##
##################################################################################
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")


crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.spec(package = "actix-files", version = "0.6.9")
crate.spec(package = "actix-web", version = "4.12.1")
crate.spec(package = "actix-ws", version = "0.3.1")
crate.spec(package = "env_logger", version = "0.11.8")
crate.spec(package = "futures-util", version = "0.3.31")
crate.spec(package = "log", version = "0.4.29")
crate.spec(package = "tokio", features = ["full"], version = "1.49.0")

crate.from_specs()
use_repo(crate, "crates")

##################################################################################
##
## Scala
##
##################################################################################


##################################################################################
##
## Java
##
##################################################################################
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.google.guava:guava:28.0-jre",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
)

use_repo(maven, "maven")

oci.pull(
    name = "distroless_java",
    digest = "sha256:97891db4665b347af579b94f324f94f984a1e2e6d009b0015a1d2d214a0389d3",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")
##################################################################################
##
## C++
##
##################################################################################
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "pkg-config", version = "0.29.2")

##################################################################################
##
## Shell
##
##################################################################################
bazel_dep(name = "rules_shell", version = "0.6.1")

##################################################################################
##
## Python Dependencies
## https://github.com/bazel-contrib/rules_python/releases
##
##################################################################################
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "bazel_lib", version = "3.1.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")



######################################################################################
##
## Golang Dependencies
##
######################################################################################
bazel_dep(name = "rules_go", version = "0.56.1")


go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")


oci.pull(
    name = "golang",
    digest = "sha256:383395b794dffa5b53012a212365d40c8e37109a626ca30d6151c8348d380b5f",
    image = "golang",
    platforms = ["linux/amd64"],
    tag = "1.25-alpine",
)
oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "alpine",
    digest = "sha256:de0eb0b3f2a47ba1eb89389859a9bd88b28e82f5826b6969ad604979713c2d4f",
    image = "alpine",
    platforms = [
        "linux/amd64",
    ],
    tag = "3.18",
)

oci.pull(
    name="my_fastapi_container_base",
    digest="sha256:fecc54cdbca5a27eafd56abdd3518415e08239fb49dd0dfedc01ab6484079bed",
    image="docker.io/thuyltm2201/my_fastapi_container_base:latest",
    tag="latest",
)

use_repo(
    oci,
    "alpine",
    "alpine_linux_amd64",
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64",
    "golang",
    "golang_linux_amd64",
    "my_fastapi_container_base",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_alexeidt_aio",
    "com_github_alexeidt_vidio",
    "com_github_cockroachdb_cockroach_go_v2",
    "com_github_esimov_pigo",
    "com_github_fogleman_gg",
    "com_github_gin_gonic_gin",
    "com_github_go_chi_chi_v5",
    "com_github_go_gl_gl",
    "com_github_go_gl_glfw_v3_3_glfw",
    "com_github_go_gl_mathgl",
    "com_github_go_gst_go_glib",
    "com_github_go_gst_go_gst",
    "com_github_go_logr_stdr",
    "com_github_go_redis_redis_v8",
    "com_github_go_sql_driver_mysql",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_gorilla_securecookie",
    "com_github_gorilla_sessions",
    "com_github_gorilla_websocket",
    "com_github_jackc_pgx_v5",
    "com_github_labstack_echo_v4",
    "com_github_lib_pq",
    "com_github_markbates_goth",
    "com_github_minio_minio_go_v7",
    "com_github_pion_interceptor",
    "com_github_pion_webrtc_v4",
    "com_github_prometheus_client_golang",
    "com_github_quic_go_quic_go",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_cockroachdb",
    "com_github_u2takey_ffmpeg_go",
    "com_github_vladimirvivien_go4vl",
    "io_gocv_x_gocv",
    "io_gorm_driver_sqlite",
    "io_gorm_gorm",
    "io_opencensus_go",
    "io_opentelemetry_go_contrib_bridges_otelslog",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_bridge_opencensus",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_exporters_zipkin",
    "io_opentelemetry_go_otel_log",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_uber_go_fx",
    "org_uber_go_zap",
)
