load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

filegroup(
    name = "cert_files",
    srcs = [        
        "server-key.pem",
        "server.pem"
    ],  # Includes all files and subdirectories
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
    ],    
    importpath = "home/caddi/cmd",
    data = [":cert_files"],
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cmd_layer",
    srcs = [
        ":cmd",
        ":cert_files"
    ],
    package_dir = "/caddi/cmd",
)

oci_image(
    name = "cmd_image",
    base = "@golang_linux_amd64",
    entrypoint = ["/caddi/cmd/cmd"],
    tars = [":cmd_layer"],
)

# This is the target that should be released to the target platform
platform_transition_filegroup(
    name = "cmd_amd64_image",
    srcs = [":cmd_image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

# $ bazel run //caddi/cmd:load
# $ docker run --rm thuyltm2201/caddi_cmd:latest
oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":cmd_amd64_image",
    repo_tags = ["thuyltm2201/caddi_cmd:notls_latest"],
)

oci_push(
    name = "push",
    image = ":cmd_amd64_image",
    remote_tags = [
        "notls_latest",
    ],
    repository = "docker.io/thuyltm2201/caddi_cmd",
)