load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "websocket_lib",
    srcs = [
        "main.go",
        "redis_store.go",
    ],
    importpath = "home/caddi/websocket",
    visibility = ["//visibility:private"],
    deps = [
        "//caddi/websocket/conn",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_securecookie//:securecookie",
        "@com_github_gorilla_sessions//:sessions",
        "@com_github_markbates_goth//:goth",
        "@com_github_markbates_goth//gothic",
        "@com_github_markbates_goth//providers/github",
    ],
)

go_binary(
    name = "websocket",
    embed = [":websocket_lib"],
    visibility = ["//visibility:public"],
)
