load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "websocket_lib",
    srcs = [
        "main.go",
        "redis_store.go",
    ],
    importpath = "home/caddi/websocket",
    visibility = ["//visibility:private"],
    deps = [
        "//caddi/websocket/conn",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_securecookie//:securecookie",
        "@com_github_gorilla_sessions//:sessions",
        "@com_github_markbates_goth//:goth",
        "@com_github_markbates_goth//gothic",
        "@com_github_markbates_goth//providers/github",
    ],
)

go_binary(
    name = "websocket",
    embed = [":websocket_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "websocket_layer",
    srcs = [":websocket"],
)

oci_image(
    name = "websocket_image",
    base = "@golang_linux_amd64",
    entrypoint = ["/caddi"],
    tars = [":websocket_layer"],
)

# This is the target that should be released to the target platform
platform_transition_filegroup(
    name = "websocket_amd64_image",
    srcs = [":websocket_image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

# $ bazel run //caddi/websocket:load
# $ docker run --rm thuyltm2201/caddi_websocket:latest
oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":websocket_amd64_image",
    repo_tags = ["thuyltm2201/caddi_websocket:latest"],
)

oci_push(
    name = "push",
    image = ":websocket_amd64_image",
    remote_tags = [
        "latest",
    ],
    repository = "docker.io/thuyltm2201/caddi_websocket",
)