load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

go_library(
    name = "serviceA_lib",
    srcs = ["main.go"],
    importpath = "home/elliptic/serviceA",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
    ],
)

go_binary(
    name = "serviceA",
    embed = [":serviceA_lib"],
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "serviceA_layer",
    srcs = [":serviceA"],
)

oci_image(
    name = "serviceA_image",
    base = "@golang_linux_amd64",
    entrypoint = ["/serviceA"],
    tars = [":serviceA_layer"],
)

# This is the target that should be released to the target platform
platform_transition_filegroup(
    name = "serviceA_amd64_image",
    srcs = [":serviceA_image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

# $ bazel run //elliptic/serviceA:load
# $ docker run --rm thuyltm2201/echo:v0
oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":serviceA_amd64_image",
    repo_tags = ["thuyltm2201/servicea:v0"],
)


oci_push(
    name = "push",
    image = ":serviceA_amd64_image",
    remote_tags = [
        "v0"
    ],
    repository = "docker.io/thuyltm2201/servicea",
)