load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

go_library(
    name = "serviceB_lib",
    srcs = ["main.go"],
    importpath = "home/elliptic/serviceB",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "serviceB",
    embed = [":serviceB_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "serviceB_layer",
    srcs = [":serviceB"],
)

oci_image(
    name = "serviceB_image",
    base = "@golang_linux_amd64",
    entrypoint = ["/serviceB"],
    tars = [":serviceB_layer"],
)

# This is the target that should be released to the target platform
platform_transition_filegroup(
    name = "serviceB_amd64_image",
    srcs = [":serviceB_image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

# $ bazel run //elliptic/serviceB:load
# $ docker run --rm thuyltm2201/serviceb:latest
oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":serviceB_amd64_image",
    repo_tags = ["thuyltm2201/serviceb:latest"],
)


oci_push(
    name = "push",
    image = ":serviceB_amd64_image",
    remote_tags = [
        "latest"
    ],
    tags = [
        "latest"
    ],
    repository = "docker.io/thuyltm2201/serviceb",
)