load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ffmpeg_lib",
    srcs = ["main.go"],
    importpath = "home/magnet/ffmpeg",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ffmpeg",
    embed = [":ffmpeg_lib"],
    visibility = ["//visibility:public"],
)
