load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "multipartmix_lib",
    srcs = ["main.go"],
    importpath = "home/magnet/multipartmix",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "multipartmix",
    embed = [":multipartmix_lib"],
    visibility = ["//visibility:public"],
)
