load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "serialize_lib",
    srcs = [
        "main.go",
        "wallet.go",
        "wallets.go",
    ],
    data = ["wallet.dat"],
    importpath = "home/pacman/serialize",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_crypto//ripemd160",
        "//pacman/cipher:cipher"
    ],
)

go_binary(
    name = "main",
    embed = [":serialize_lib"],
    visibility = ["//visibility:public"],
)
