load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "beam_lib",
    srcs = ["wordcount.go"],
    importpath = "home/perimeter/beam",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_apache_beam_sdks_v2//go/pkg/beam",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/io/textio",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/register",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/transforms/stats",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/x/beamx",
    ],
)

go_binary(
    name = "beam",
    embed = [":beam_lib"],
    visibility = ["//visibility:public"],
)
