# gazelle:ignore
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "my_c_library",
    srcs = ["libadd.c"],
    hdrs = ["libadd.h"],
    visibility = ["//visibility:public"],
)

# keep
go_library(
    name = "cgo_lib",
    srcs = [
        "libadd.c",
        "libadd.h",
        "main.go"],
    cgo = True, # Enables cgo
    cdeps = [":my_c_library"], # Reference to the C library target
    importpath = "home/phase1/cgo",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cgo",
    embed = [":cgo_lib"],
    visibility = ["//visibility:public"],
)
