load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echo_lib",
    srcs = ["main.go"],
    importpath = "home/phase1/echo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_labstack_echo_v4//:go_default_library"],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)
