load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

go_library(
    name = "echo_lib",
    srcs = ["main.go"],
    importpath = "home/phase1/echo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_labstack_echo_v4//:go_default_library"],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "echo_layer",
    srcs = [":echo"]
)

oci_image(
    name = "echo_image",
    base = "@golang_linux_amd64", 
    entrypoint = ["/echo"],
    tars = [":echo_layer"],
)

# This is the target that should be released to the target platform
platform_transition_filegroup(
    name = "echo_amd64_image",
    srcs = [":echo_image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

# $ bazel run //phase1/echo:load
# $ docker run --rm thuyltm2201/echo:v0
oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":echo_amd64_image",
    repo_tags = ["thuyltm2201/echo:v0"],
)

oci_push(
    name = "push",
    image = ":echo_amd64_image",
    remote_tags = [
        "latest",
        "24h"
    ],
    repository = "docker.io/thuyltm2201/echo",
)