load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skaffold_lib",
    srcs = ["main.go"],
    importpath = "home/phase1/skaffold",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "skaffold",
    embed = [":skaffold_lib"],
    visibility = ["//visibility:public"],
)
