load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "websocket_lib",
    srcs = [
        "main.go",
        "server.go",
        "stub_play_store.go",
        "types.go",
    ],
    importpath = "home/phase1/websocket",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_websocket//:go_default_library"],
)

go_binary(
    name = "websocket",
    embed = [":websocket_lib"],
    visibility = ["//visibility:public"],
)
